add more jvm and os guidelines